# SensorsCalibration

./: .gitignore  README.md  run_docker.sh
SensorX2car/camera2car/manual_calib/: CMakeLists.txt
SensorX2car/lidar2car/: CMakeLists.txt  README.md
SensorX2car/lidar2car/app/: run_lidar2car.cpp
SensorX2car/lidar2car/output/: calib_result.txt  pose.txt
SensorX2car/pose_sensor2car/: CMakeLists.txt  README.md
SensorX2car/pose_sensor2car/include/: util.h  yawCalib.h
SensorX2car/pose_sensor2car/src/: run_imu2car.cpp  yawCalib.cpp
camera_intrinsic/intrinsic_calib/: CMakeLists.txt
camera_intrinsic/intrinsic_calib/include/: AutoImagePicker.hpp  IntrinsicCalibration.hpp  common.hpp
camera_intrinsic/intrinsic_calib/src/: AutoImagePicker.cpp  IntrinsicCalibration.cpp  run_intrinsic_calibration.cpp
factory_calib/: CMakeLists.txt  README.md
factory_calib/data/pcds/: 1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
factory_calib/include/: adas_calib.hpp  calibration_board.hpp  conversion.hpp  dataConvert.hpp  find_homography.hpp  logging.hpp
factory_calib/include/apriltag/: corner_detect.hpp  simplifyPath.hpp
factory_calib/include/apriltags/: Tag36h11.h  TagDetector.h
factory_calib/include/aruco_marker/: corner_detect.hpp
factory_calib/include/calibration/: adas_calib.hpp  pnp_solver.hpp
factory_calib/include/chessboard/: corner_detect.hpp
factory_calib/include/circle_board/: circle_detect.hpp  corner_detect.hpp
factory_calib/include/round_hole_board/: lidar_pattern.h  velo2cam_utils.h
factory_calib/include/utils/: KeypointDetector.hpp  LineModel.hpp  RansacFitLine.hpp  common.hpp  corner.hpp  filter.hpp
factory_calib/include/vertical_board/: corner_detect.hpp
factory_calib/output/: front_center_camera-calibration.json  front_center_camera-intrinsic.json  front_center_camera-to-car_center-extrinsic.json
factory_calib/src/: adas_calib.cpp  find_homography.cpp  pnp_solver.cpp  run_board_detect.cpp  run_extrinsic_calib.cpp  run_homo_vp_calib.cpp  run_lidar_detect.cpp
factory_calib/src/apriltag/: contours.c  corner_dectect.cpp  simplifyPath.cpp
factory_calib/src/aruco_marker/: contours.c  corner_dectect.cpp  simplifyPath.cpp
factory_calib/src/calibration/: adas_calib.cpp  find_homography.cpp  pnp_solver.cpp
factory_calib/src/chessboard/: corner_detect.cpp
factory_calib/src/circle_board/: circle_detect.cpp  corner_detect.cpp
factory_calib/src/round_hole_board/: lidar_pattern.cpp
factory_calib/src/utils/: KeypointDetector.cpp  RansacFitLine.cpp
factory_calib/src/vertical_board/: corner_detect.cpp
factory_calib/tool/after-sale_calibration/: calibration.py
factory_calib/tool/factory_solution/: birdviewCanvas.py  datatypes.py  rangeCalculator.py  solutionGui.py
imu_heading/auto_calib/: CMakeLists.txt
imu_heading/auto_calib/data/: novatel-enu.csv  novatel-utm.csv
imu_heading/auto_calib/include/: imu_heading.hpp
imu_heading/auto_calib/src/: imu_heading.cpp  run_imu_heading.cpp
lidar2camera/auto_calib_v2.0/: CMakeLists.txt  README.md
lidar2camera/auto_calib_v2.0/data/: initial_error.txt
lidar2camera/auto_calib_v2.0/include/: calibration.hpp  dataloader.hpp  utility.hpp
lidar2camera/auto_calib_v2.0/src/: calibration.cpp  run_lidar2camera.cpp
lidar2camera/joint_calib/: CMakeLists.txt  README.md
lidar2camera/joint_calib/data/: circle.csv
lidar2camera/joint_calib/include/: camera_calibrator.hpp  nonlinear_optimizer.hpp  params.hpp  reprojection_error.hpp  termination_checking.hpp
lidar2camera/joint_calib/src/: camera_calibrator.cpp  nonlinear_optimizer.cpp
lidar2camera/joint_calib/tool/: README.md
lidar2camera/manual_calib/: CMakeLists.txt
lidar2camera/manual_calib/data/: 0.pcd  center_camera-intrinsic.json  top_center_lidar-to-center_camera-extrinsic.json
lidar2camera/manual_calib/include/: intrinsic_param.hpp
lidar2camera/manual_calib/src/: run_lidar2camera.cpp
lidar2imu/auto_calib/: CMakeLists.txt
lidar2imu/auto_calib/data/: NovAtel-pose-lidar-time.txt  gnss-to-top_center_lidar-extrinsic.json  top_center_lidar-enu.txt  top_center_lidar-utm.txt
lidar2imu/auto_calib/include/: BALM.hpp  calibration.hpp  gen_BALM_feature.hpp  optimize.hpp  registration.hpp
lidar2imu/auto_calib/src/: calibration.cpp  registration.cpp  run_lidar2imu.cpp
lidar2imu/manual_calib/: CMakeLists.txt
lidar2imu/manual_calib/data/: gnss-to-top_center_lidar-extrinsic.json  top_center_lidar-pose.txt
lidar2imu/manual_calib/src/: pcd_view_stitcher.cpp  run_lidar2imu.cpp
lidar2lidar/auto_calib/: CMakeLists.txt  README.md  stitching.pcd  stitching_.pcd
lidar2lidar/auto_calib/data/: front_lidar-to-top_center_lidar-extrinsic.json  p64.pcd  qt-to-p64-extrinsic (copy).json  qt-to-p64-extrinsic.json  qt.pcd  top_center_lidar.pcd
lidar2lidar/auto_calib/ground/: ground.pcd  no_ground.pcd  ran_ground.pcd  ran_no_ground.pcd
lidar2lidar/auto_calib/include/: calibration.hpp  extrinsic_param.hpp  logging.hpp  plane_ground_filter_core.h  registration.hpp  registration_icp.hpp  transform_util.hpp
lidar2lidar/auto_calib/src/: calibration.cpp  plane_ground_filter_core.cpp  registration.cpp  registration_icp.cpp  run_lidar2lidar.cpp  test.cpp
lidar2lidar/manual_calib/: CMakeLists.txt
lidar2lidar/manual_calib/data/: p64-to-qt-extrinsic.json
lidar2lidar/manual_calib/src/: run_lidar2lidar.cpp
online_calib/lidar2imu/: CMakeLists.txt
online_calib/lidar2imu/apps/: run_lidar2car.cpp
online_calib/lidar2imu/include/: lidar_factors.hpp
online_calib/lidar2imu/src/: lidar2car.cpp  lidar_car_calibration.cpp  registration.cpp
online_calib/radar2carcenter/: CMakeLists.txt  compute_matrix.py  drawCosine.py  drawStationary.py
online_calib/radar2carcenter/apps/: run_radar2car.cpp
online_calib/radar2carcenter/include/: RadarDataLoader.hpp  radar2car.hpp  (+1 more)
online_calib/vins_camera2imu/: CMakeLists.txt  CN.yaml  README.md
surround-camera/auto_calib_fisheye/: CMakeLists.txt  README.md
surround-camera/auto_calib_target/: CMakeLists.txt  README.md
(+5179 files in other folders)
